--- a/style.css
+++ b/style.css
@@ -29,18 +29,33 @@
   }
 }
 
+
 body {
   background-color: #e6e6fa;
 }
 
+/* CSS untuk tampilan pada layar kecil */
+@media only screen and (max-width: 768px) {
+  /* Atur lebar gambar agar dapat menyesuaikan ukuran layar */
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  /* Atur lebar dan padding pada bagian konten */
+  .content {
+    width: 90%;
+    padding: 20px;
+  }
+}
 
 .judul{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 20px;
     font-weight: 700;
-    background: linear-gradient(to right, #0278ff, #0077b3);
+    color: black;
+    /* background: linear-gradient(to right, #0278ff, #0077b3);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent; */
 }
 
 .content{
@@ -66,7 +81,7 @@ p{
 footer {
   background-color: #333;
   color: #fff;
-  padding: 50px 0;
+  padding: 30px 0;
 }
 
 .footer-container {
