--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #fff;
+  background-color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.loadtext {
+  color: #fff;
 }
 
 .loading-icon {
@@ -29,9 +33,9 @@
   }
 }
 
-
 body {
-  background-color: #e6e6fa;
+  background-color: #fefeff;
+  color: #fff;
 }
 
 /* CSS untuk tampilan pada layar kecil */
@@ -48,36 +52,61 @@ body {
   }
 }
 
-.judul{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 12px;
-    font-weight: 700;
-    color: black;
-    text-align: center;
-    text-decoration: overline;
-    /* background: linear-gradient(to right, #0278ff, #0077b3);
+.button-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.red-button{
+  background-color: #d82020;
+}
+
+button {
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin: 10px;
+}
+
+button:hover {
+  opacity: 0.8;
+  background-color: steelblue;
+}
+
+.judul {
+  font-family: monospace;
+  font-size: 12px;
+  font-weight: 700;
+  color: black;
+  text-align: center;
+  text-decoration: overline;
+  /* background: linear-gradient(to right, #0278ff, #0077b3);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; */
 }
 
-.content{
-    padding-top: 1mm;
-    padding-bottom: 3cm;
+.content {
+  padding-top: 2mm;
+  padding-bottom: 10mm;
 }
 
-h1{
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 2em;
-    font-weight: bold;
-    color: black;
+h1 {
+  font-family: monospace;
+  font-size: 2em;
+  font-weight: bold;
+  color: black;
 }
 
-p{
-    font-family: 'Source Sans Pro', sans-serif;
-    text-align: justify;
-
+p {
+  font-family: source sans pro, sans-serif;
+  text-align: justify;
+  color: #000;
 }
-
 
 footer {
   background-color: #333;
@@ -93,7 +122,6 @@ footer {
   justify-content: space-between;
 }
 
-
 .footer-col {
   flex: 1;
   margin: 0 20px;
@@ -104,15 +132,19 @@ footer {
   margin-bottom: 20px;
 }
 
+.footer-col p {
+  color: white;
+}
+
 ul {
   list-style: none;
   padding: 0;
 }
 
 li {
-padding: 1mm;
-font-family: 'Source Sans Pro', sans-serif;
-
+  padding: 1mm;
+  font-family: 'Source Sans Pro', sans-serif;
+  color: #000;
 }
 
 ul li a {
