--- a/style.css
+++ b/style.css
@@ -11,6 +11,28 @@
   justify-content: center;
 }
 
+/* CSS untuk tampilan pada layar kecil */
+@media only screen and (max-width: 768px) {
+  /* Atur lebar gambar agar dapat menyesuaikan ukuran layar */
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  /* Atur lebar dan padding pada bagian konten */
+  .content {
+    width: 92%;
+    padding: 5%;
+  }
+}
+
+/* Tampilan pada layar smartphone */
+@media (max-width: 576px) {
+  .container {
+    grid-template-columns: 1fr;
+    font-size: 0.8rem;
+  }
+}
+
 .loadtext {
   color: #fff;
 }
@@ -38,19 +60,6 @@ body {
   color: #fff;
 }
 
-/* CSS untuk tampilan pada layar kecil */
-@media only screen and (max-width: 768px) {
-  /* Atur lebar gambar agar dapat menyesuaikan ukuran layar */
-  img {
-    max-width: 100%;
-    height: auto;
-  }
-  /* Atur lebar dan padding pada bagian konten */
-  .content {
-    width: 90%;
-    padding: 20px;
-  }
-}
 
 .button-container{
   display: flex;
@@ -65,12 +74,12 @@ body {
 button {
   color: white;
   border: none;
-  padding: 10px 20px;
+  padding: 5px 10PX;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin: 10px;
+  margin: 5px;
 }
 
 button:hover {
