--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 /* CSS untuk tampilan pada layar kecil */
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1024px){
   /* Atur lebar gambar agar dapat menyesuaikan ukuran layar */
   img {
     max-width: 100%;
@@ -31,6 +31,10 @@
     grid-template-columns: 1fr;
     font-size: 0.8rem;
   }
+}
+
+@media screen and (min-width: 1024px) {
+  /* tata letak navbar dan konten pada layar besar */
 }
 
 .loadtext {
@@ -59,9 +63,26 @@
 header {
   background-color: #333;
   color: #fff;
-  padding: 1px;
+  padding: 0px;
   margin: auto;
   width: 100%;
+  height: 100%;
+}
+
+html{
+  background-color: #fefeff;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background-color: #fefeff;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 nav {
@@ -69,6 +90,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   width: 100%;
+  height: 100%;
 }
 
 ul {
@@ -107,14 +129,6 @@ li {
 
 }
 
-body html{
-  background-color: #fefeff;
-  color: #fff;
-  margin: 0;
-  width: 100%;
-}
-
-
 .button-container{
   display: flex;
   justify-content: center;
@@ -127,9 +141,9 @@ body html{
   color: white;
   background-color: #333;
   border: none;
-  padding: 8px 6PX;
+  padding: 6px 6PX;
   border-radius: 6px;
-  font-size: 13px;
+  font-size: 12px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   margin: 5px;
@@ -152,9 +166,6 @@ body html{
   text-align: center;
   text-decoration: overline;
   padding-top: 25px;
-  /* background: linear-gradient(to right, #0278ff, #0077b3);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent; */
 }
 
 .content {
@@ -169,10 +180,18 @@ h1 {
   color: black;
 }
 
+h2 {
+  font-family: monospace;
+  font-weight: bold;
+  color: black;
+}
+
 p {
   font-family: source sans pro, sans-serif;
   text-align: justify;
   color: #000;
+  padding-left: 25px;
+  padding-right: 20px;
 }
 
 footer {
