--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 }
 
 /* CSS untuk tampilan pada layar kecil */
-@media only screen and (min-width: 768px) and (max-width: 1024px){
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
   /* Atur lebar gambar agar dapat menyesuaikan ukuran layar */
   img {
     max-width: 100%;
@@ -59,7 +59,6 @@
   }
 }
 
-
 header {
   background-color: #333;
   color: #fff;
@@ -69,20 +68,18 @@ header {
   height: 100%;
 }
 
-html{
+html {
   background-color: #fefeff;
   color: #fff;
   margin: 0;
   padding: 0;
 }
 
-body{
+body {
   background-color: #fefeff;
   color: #fff;
   margin: 0;
   padding: 0;
-  padding-left: 0px;
-  padding-right: 0px;
   width: 100%;
   height: 100%;
 }
@@ -128,22 +125,22 @@ li {
 }
 
 .dropdown:hover a {
-
 }
 
-.button-container{
+.button-container {
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
   margin: auto;
+  padding-bottom: 5mm;
 }
 
-.red-button{
+.red-button {
   color: white;
   background-color: #333;
   border: none;
-  padding: 6px 6PX;
+  padding: 6px 6px;
   border-radius: 6px;
   font-size: 12px;
   cursor: pointer;
@@ -172,8 +169,7 @@ li {
 
 .content {
   padding-top: 2mm;
-  padding-bottom: 10mm;
-  padding: 8mm;
+  padding-left: 8mm;
 }
 
 h1 {
@@ -189,12 +185,14 @@ h2 {
   color: black;
 }
 
+h3 {
+  padding: 0;
+}
+
 p {
   font-family: source sans pro, sans-serif;
   text-align: justify;
   color: #000;
-  padding-left: 25px;
-  padding-right: 20px;
 }
 
 footer {
